# buspirate-hal

./: Cargo.toml  README.md  notes.txt
examples/: 24x16.rs  24x16_i2ctest.rs  25xm04.rs  config.rs  selftest.rs  sht4x.rs  spi-loopback.rs  w25q32.rs
src/: bpio2.fbs  bpio2_generated.rs  buspirate.rs  eh_i2c.rs  eh_spi.rs  error.rs  lib.rs  modes.rs  transfer.rs  util.rs
src/bpio/: bpio.fbs  bpio_generated.rs  mod.rs
