[package]
name = "buspirate-hal"
version = "0.1.0"
edition = "2021"       # 2021 because of the generated code's unsafe parts

[dependencies]
cobs = "0.4"
embedded-hal = "1"
flatbuffers = "25"
serialport = "4"

[dev-dependencies]
anyhow = "1"
embedded-hal-mock = "0.11.1"
sht4x-rjw = { version = "0.1.0", path = "../embedded/sht40-rjw" }
