[package]
name = "buspirate-hal"
version = "0.1.0"
edition = "2024"       # 2021 because of the generated code's unsafe parts

[dependencies]
bit_field = "0.10"
bon = "3.6"
bpio2 = { git = "https://github.com/robjwells/BusPirate-BPIO2-flatbuffer-interface.git", branch = "rust-bpio2-crate", version = "0.2.1" }
cobs = "0.4"
embedded-hal = "1"
flatbuffers = "25"
log = "0.4.27"
serialport = "4"

[dev-dependencies]
anyhow = "1"
embedded-hal-mock = "0.11.1"
env_logger = "0.11.8"
sht4x-rjw = { version = "0.1.0", path = "../embedded/sht40-rjw" }
